force-app/main/default/objects/FactSheet__c/FactSheet__c.object-meta.xml
<CustomObject>
    <label>FactSheet</label>
    <nameField>
        <label>FactSheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FactSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>