force-app/main/default/objects/FactSheet__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Fields of &quot;Object&quot; field</description>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>