force-app/main/default/objects/FactSheet__c/fields/IsMain__c.field-meta.xml
<CustomField>
    <fullName>IsMain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Main object to be used for FactSheet</description>
    <label>IsMain</label>
    <type>Checkbox</type>
</CustomField>