force-app/main/default/objects/FactSheet__c/fields/ParentFactSheet__c.field-meta.xml
<CustomField>
    <fullName>ParentFactSheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self reference to show which record is the parent obejct</description>
    <label>ParentFactSheet</label>
    <referenceTo>FactSheet__c</referenceTo>
    <relationshipLabel>FactSheets</relationshipLabel>
    <relationshipName>FactSheets</relationshipName>
    <type>Lookup</type>
</CustomField>