force-app/main/default/objects/FactSheet__c/fields/RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipName__c</fullName>
    <description>Name of relationship to be used for child objects so we can create nested query (rather than many queries)</description>
    <label>RelationshipName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>