force-app/main/default/objects/FactSheet__c/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <description>Filer for where clause</description>
    <inlineHelpText>Example of Where for Account: Status=&#39;Prospect&#39;</inlineHelpText>
    <label>Where</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>