force-app/main/default/objects/FactSheet__c/listViews/All_Fact_Sheets.listView-meta.xml
<ListView>
    <fullName>All_Fact_Sheets</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>IsMain__c</columns>
    <columns>ParentFactSheet__c</columns>
    <columns>Fields__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Fact Sheets</label>
</ListView>