force-app/main/default/objects/FactSheet__c/listViews/Top_Fact_Sheets.listView-meta.xml
<ListView>
    <fullName>Top_Fact_Sheets</fullName>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>IsMain__c</columns>
    <columns>ParentFactSheet__c</columns>
    <columns>Fields__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>IsMain__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Top Fact Sheets</label>
</ListView>